--- a/.travis.yml
+++ b/.travis.yml
@@ -42,13 +42,14 @@ script:
       fi;
 
       if [[ $release_latest == "yes" ]]; then
-        docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        docker tag  "iov1/block-metrics:${BUILD_VERSION}" "iov1/bnsd:latest";
         docker push "iov1/block-metrics:latest";
         docker logout;
       fi;
 
       if [[ $release_tag == "yes" ]]; then
-        docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker tag  "iov1/block-metrics:${BUILD_VERSION}" "iov1/block-metrics:$TRAVIS_TAG" ;
         docker push "iov1/block-metrics:$TRAVIS_TAG";
         docker logout;
