--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
 
 script:
   - set -eo pipefail
-  - make install;
+  - make all;
   - printenv TRAVIS_COMMIT_MESSAGE > commit.msg
   - if [[ "$TRAVIS_GO_VERSION" == "$MAIN_GO_VERSION" && "$TRAVIS_OS_NAME" == "linux" ]]; then
       release_latest=$( [[ "$TRAVIS_BRANCH" == "master" && "$TRAVIS_TAG" == "" && "$TRAVIS_PULL_REQUEST_BRANCH" == "" ]] && echo "yes" || echo "no" );
