--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
 
 script:
   - set -eo pipefail
+  - make install
   - make all
   - if [[ "$TRAVIS_GO_VERSION" == "$MAIN_GO_VERSION" && "$TRAVIS_OS_NAME" == "linux" ]]; then
       release_latest=$( [[ "$TRAVIS_BRANCH" == "master" && "$TRAVIS_TAG" == "" && "$TRAVIS_PULL_REQUEST_BRANCH" == "" ]] && echo "yes" || echo "no" );
